Updated Indonesian translations
https://github.com/bibledit/cloud/issues/522

--- a/locale/id.po
+++ b/locale/id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2021-03-26 01:18+0000\n"
+"PO-Revision-Date: 2021-03-26 19:33+0000\n"
 "Last-Translator: Phil Fields <oreo@bahasakita.net>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -911,7 +911,7 @@ msgid "Space before a full stop"
 msgstr ""
 
 msgid "Space before a question mark"
-msgstr ""
+msgstr "Terdapat spasi sebelum tanda tanya."
 
 msgid "Space before an exclamation mark"
 msgstr ""
@@ -1277,7 +1277,7 @@ msgid "Passwords do not match"
 msgstr "Kedua kata sandi tadi tidak sama."
 
 msgid "Current password is not valid"
-msgstr "Kata sandi tidak benar"
+msgstr "Kata sandi tadi tidak benar."
 
 msgid "The new password was saved"
 msgstr "Kata sandi baru sudah disimpan"
@@ -3048,6 +3048,8 @@ msgid ""
 "a space before a comma, semicolon, colon, full stop, question mark, or "
 "exclamation mark"
 msgstr ""
+"Terdapat spasi sebelum koma, titik koma, titik dua, titik tanda tanya, atau "
+"tanda tegas."
 
 msgid "sentence structure"
 msgstr ""
@@ -9261,10 +9263,10 @@ msgid "Your email address?"
 msgstr "Apa alamat emailmu?"
 
 msgid "Security question:"
-msgstr ""
+msgstr "Pertanyaan sekuriti:"
 
 msgid "Hint for answering the security question:"
-msgstr ""
+msgstr "Kalau perlu bantuan untuk menjawab pertanyaan sekuriti:"
 
 msgid ""
 "Submit your username or email address, and instructions will be emailed to "
@@ -10890,7 +10892,7 @@ msgid "User already exists"
 msgstr "Nama pengguna itu sudah terdaftar."
 
 msgid "User created"
-msgstr "Akun pengguna sudah dibuat"
+msgstr "Berhasil. Akun pengguna sudah dibuat."
 
 msgid "Cannot remove the last user"
 msgstr ""
@@ -10956,7 +10958,7 @@ msgid "The email address for the feedback link was saved."
 msgstr ""
 
 msgid "The email address is not valid."
-msgstr "Alamat email tidak benar."
+msgstr "Alamat email tadi tidak benar."
 
 msgid "The Bible is being exported to Html format."
 msgstr ""
@@ -11467,7 +11469,7 @@ msgid "The emailer is not yet set up."
 msgstr ""
 
 msgid "The email address does not appear to be valid"
-msgstr ""
+msgstr "Alamat email tadi nampaknya tidak benar."
 
 msgid "The name and email address were saved"
 msgstr ""
@@ -11491,7 +11493,7 @@ msgid "Would you like to delete this versification system?"
 msgstr ""
 
 msgid "Username or email address is too short"
-msgstr "Nama pengguna atau alamat email terlalu pendek"
+msgstr "Nama pengguna atau alamat email terlalu pendek."
 
 msgid "Account changed"
 msgstr ""
@@ -11517,7 +11519,7 @@ msgstr ""
 "supaya bisa menentukan kata sandi baru"
 
 msgid "Username or email address cannot be found"
-msgstr "Nama pengguna atau alamat email tidak terdapat"
+msgstr "Nama pengguna atau alamat email tidak terdapat."
 
 msgid "Switch user"
 msgstr "Ganti pengguna"
@@ -11533,7 +11535,9 @@ msgstr "Damsyik"
 msgid ""
 "And while he travelled, he came near Damascus; and suddenly a light from "
 "heaven shone round about him."
-msgstr "Lihat Kisah 9:3 dalam TB."
+msgstr ""
+"Selama ia sedang berjalan, ia semakin dekat dengan Damsyik, dan tiba-tiba "
+"suatu cahaya dari langit memancar mengelilinginya. (Kisah 9:3 AYT)"
 
 msgid "What is the name of the brother of Aaron the high priest?"
 msgstr "Siapakah adik Imam Besar Harun?"
@@ -11544,7 +11548,11 @@ msgstr "Musa"
 msgid ""
 "And the anger of Jehova was kindled against Moses, and he said: Is not Aaron "
 "the Levite your brother?"
-msgstr "Lihat Keluaran 4:14."
+msgstr ""
+"Kemarahan TUHAN pun menyala atas Musa, dan Dia berfirman, “Bukankah Harun, "
+"orang Lewi itu, kakakmu? Aku tahu, dia pandai berkata-kata. Lihat, dia akan "
+"datang untuk menemuimu. Ketika dia menemuimu, dia akan bersukacita dalam "
+"hatinya. (Keluaran 4:14 AYT)"
 
 msgid "What is the name of the city where Jesus was born?"
 msgstr ""
@@ -11555,7 +11563,10 @@ msgstr "Betlehem"
 msgid ""
 "When Jesus was born in Bethlehem of Judaea in the days of Herod the king, "
 "behold, wise men from the east came to Jerusalem."
-msgstr "Lihat Matius 2:1."
+msgstr ""
+"Sekarang, setelah Yesus lahir di Betlehem, di Yudea, pada zaman Raja "
+"Herodes, lihat, orang-orang Majus dari timur datang ke Yerusalem. (Matius "
+"2:1 AYT)"
 
 msgid "What is the name of the island where John was sent to?"
 msgstr "Penulis kitab Wahyu, Yohanes, ditahan di pulau mana?"
@@ -11567,16 +11578,19 @@ msgid ""
 "I, John, your brother and companion in the persecution, and in the kingdom "
 "and endurance of Jesus Christ, was in the island which is called Patmos, "
 "because of the word of God, and because of the testimony of Jesus Christ."
-msgstr "Lihat Wahyu 1:9."
+msgstr ""
+"Aku, Yohanes, saudara dan sesamamu yang ambil bagian dalam kesusahan, dalam "
+"Kerajaan, dan dalam ketekunan di dalam Yesus, berada di pulau yang disebut "
+"Patmos karena firman Allah dan kesaksian Yesus. (Wahyu 1:9 AYT)"
 
 msgid "Username should be at least two characters long"
-msgstr "Nama pengguna paling pendek adalah dua huruf"
+msgstr "Nama pengguna paling pendek adalah dua huruf."
 
 msgid "Password should be at least two characters long"
 msgstr "Paling pendek, kata sandi harus terdiri dari dua huruf"
 
 msgid "The answer to the question is not correct"
-msgstr ""
+msgstr "Jawabanmu itu tidak benar!"
 
 msgid ""
 "The username that you have chosen has already been taken. Please choose "
@@ -11606,4 +11620,4 @@ msgid "Your account is now active and you have logged in."
 msgstr ""
 
 msgid "Username or email address or password are not correct"
-msgstr "Nama pengguna atau alamat email yang dimasukkan tidak benar"
+msgstr "Nama pengguna atau alamat email yang dimasukkan tidak benar."
