--- a/locale/id.po
+++ b/locale/id.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bibledit\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"PO-Revision-Date: 2021-03-26 19:33+0000\n"
+"PO-Revision-Date: 2021-03-28 01:33+0000\n"
 "Last-Translator: Phil Fields <oreo@bahasakita.net>\n"
 "Language-Team: Indonesian <id@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -2140,7 +2140,7 @@ msgid "Cloud"
 msgstr ""
 
 msgid "Basic mode"
-msgstr ""
+msgstr "Antar muka dasar"
 
 msgid "USFM"
 msgstr ""
@@ -2161,7 +2161,7 @@ msgid "Help and About"
 msgstr ""
 
 msgid "Translate"
-msgstr ""
+msgstr "Terjemahanku"
 
 msgid "Tools"
 msgstr "Alat-alat"
@@ -2588,6 +2588,8 @@ msgstr ""
 msgid ""
 "Once in advanced mode, return to basic mode via menu Settings / Basic mode."
 msgstr ""
+"Nanti kalau mau kembali ke Antar muka dasar, meng-klik Settings, lalu Antar "
+"muka dasar."
 
 msgid "Show the changes"
 msgstr ""
