--- a/locale/fr.po
+++ b/locale/fr.po
@@ -13,7 +13,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Launchpad (build 21fefc602783aa4ba863a4a6c29d38d788ce04ad)\n"
+"X-Generator: Launchpad (build 57f1f603f707b9cfa764cae8dd0f3999026b4763)\n"
 
 msgid "Has been sending and receiving during the past hour"
 msgstr "A fait l'envoi et la réception au cours de la dernière heure"
@@ -4446,7 +4446,15 @@ msgstr "Vous pouvez téléverser une nouvelle police."
 msgid "Cache"
 msgstr ""
 
-msgid "Clear the web cache and the resources cache."
+msgid "Clear the web cache and the resources cache now."
+msgstr ""
+
+msgid "Keep the resources cache for an extended period of time."
+msgstr ""
+
+msgid ""
+"This makes the second and subsequent resources downloads by Bibledit clients "
+"much faster."
 msgstr ""
 
 msgid "Queued emails"
@@ -4810,14 +4818,14 @@ msgstr ""
 msgid "Username"
 msgstr "Identifiant"
 
+msgid "Days"
+msgstr ""
+
 msgid "Role"
 msgstr "Rôle"
 
 msgid "Email"
 msgstr "Email"
-
-msgid "Privileges"
-msgstr "Privilèges"
 
 msgid "This lists several user accounts and their properties."
 msgstr ""
@@ -5057,6 +5065,9 @@ msgstr "Visitez Bible Drop Box pour plus d'options."
 
 msgid "There are more export formats through the BibleMultiConverter."
 msgstr ""
+
+msgid "Privileges"
+msgstr "Privilèges"
 
 msgid ""
 "This lists the accounts of the users who have roles you are responsible for."
@@ -13081,7 +13092,7 @@ msgstr "Conversion de ressources USFM en bible"
 msgid "Conversion completed"
 msgstr "Conversion terminée"
 
-msgid "Select a resource to be used as a base resource."
+msgid "Select a resource to be used as a base resource"
 msgstr ""
 
 msgid "The base resource is used as a starting point for the comparison."
@@ -13314,6 +13325,94 @@ msgstr ""
 "Moi, Jean, qui suis votre frère et partage avec vous les persécutions, le "
 "royaume et l’endurance pour Jésus, j’étais alors dans l’île de Patmos à "
 "cause de la parole de Dieu et du témoignage de Jésus."
+
+msgid "Who is the first person to acknowledge Jesus as the Christ?"
+msgstr ""
+
+msgid "Simeon"
+msgstr ""
+
+msgid ""
+"And, behold, there was a man in Jerusalem, whose name was Simeon; and the "
+"same man was just and devout, waiting for the consolation of Israel: and the "
+"Holy Ghost was upon him. And it was revealed unto him by the Holy Ghost, "
+"that he should not see death, before he had seen the Lord's Christ."
+msgstr ""
+
+msgid "To whom was the Acts Of Apostles written?"
+msgstr ""
+
+msgid "Theophilus"
+msgstr ""
+
+msgid ""
+"The former treatise have I made, O Theophilus, of all that Jesus began both "
+"to do and teach,"
+msgstr ""
+
+msgid "Where did Jesus met the woman of Samaria?"
+msgstr ""
+
+msgid "Jacob's well"
+msgstr ""
+
+msgid ""
+"Then cometh he to a city of Samaria, which is called Sychar, near to the "
+"parcel of ground that Jacob gave to his son Joseph. Now Jacob's well was "
+"there. Jesus therefore, being wearied with his journey, sat thus on the "
+"well: and it was about the sixth hour. There cometh a woman of Samaria to "
+"draw water: Jesus saith unto her, Give me to drink."
+msgstr ""
+
+msgid "Who was the father of Abraham?"
+msgstr ""
+
+msgid "Terah"
+msgstr ""
+
+msgid "And Terah took Abram his son,"
+msgstr ""
+
+msgid "Who was the son of Cush, the mighty hunter before the LORD?"
+msgstr ""
+
+msgid "Nimrod"
+msgstr ""
+
+msgid ""
+"And Cush begat Nimrod: he began to be a mighty one in the earth. He was a "
+"mighty hunter before the Lord: wherefore it is said, Even as Nimrod the "
+"mighty hunter before the Lord."
+msgstr ""
+
+msgid "What is the name of Job's friend that answered him first?"
+msgstr ""
+
+msgid "Eliphaz"
+msgstr ""
+
+msgid "Then Eliphaz the Temanite answered and said,"
+msgstr ""
+
+msgid "What is the name of Ruth's husband?"
+msgstr ""
+
+msgid "Boaz"
+msgstr ""
+
+msgid ""
+"So Boaz took Ruth, and she was his wife: and when he went in unto her, the "
+"Lord gave her conception, and she bare a son."
+msgstr ""
+
+msgid "Who taught Lemuel Proverbs chapter 31?"
+msgstr ""
+
+msgid "Lemuel's mother"
+msgstr ""
+
+msgid "The words of king Lemuel, the prophecy that his mother taught him."
+msgstr ""
 
 msgid "Username should be at least four characters long"
 msgstr ""
